@@ -275,7 +275,7 @@
                 <exclude name="**/ReflectionAntLauncher*"/>
             </fileset>
         </copy>
-        <retrotranslator srcdir="build/test-classes13" target="1.3" smart="true" 
+        <retrotranslator srcdir="build/test-classes13" target="1.3" smart="true"
                          advanced="true" verify="true" srcmask="*.class;*.properties">
             <classpath path="${java13_rt_jar}"/>
             <classpath location="build/retrotranslator-runtime13-${version}.jar"/>
@@ -412,6 +412,7 @@
         <echo message="Running classes in test-reflection on ${java.home}"/>
         <junit printsummary="withOutAndErr" fork="no" reloading="false" failureproperty="test.failed">
             <formatter type="brief" usefile="false"/>
+            <sysproperty key="net.sf.retrotranslator.tests.safe" value="true"/>
             <batchtest>
                 <fileset dir="build/test-reflection" includes="**/*TestCase.class" />
             </batchtest>
@@ -419,18 +420,31 @@
         <fail if="test.failed"/>
     </target>
 
-    <target name="test-safe" depends="compile-tests">
+    <target name="test-safe" depends="compile-tests" unless="skip_reflection">
         <mkdir dir="build/test-safe"/>
         <retrotranslator srcdir="build/test-classes15" destdir="build/test-safe" reflection="safe"
-                         advanced="true" verify="true" srcmask="*.class;*.properties">
+                         advanced="true" verify="true" srcmask="*.class;*.properties"
+                         stripannot="true" stripsign="true">
             <classpath path="${java14_rt_jar}"/>
             <classpath location="build/retrotranslator-runtime-${version}.jar"/>
             <classpath refid="classpath"/>
         </retrotranslator>
-        <antcall target="subtest-junit14">
-            <param name="java_home" value="${java14_home}"/>
-            <param name="test_classes" value="build/test-safe"/>
-        </antcall>
+        <echo message="Running classes in build/test-safe on ${java14_home}"/>
+        <junit printsummary="withOutAndErr" fork="yes" forkmode="once"
+               jvm="${java14_home}/bin/java" failureproperty="test.failed">
+            <jvmarg value="-Xfuture"/>
+            <sysproperty key="net.sf.retrotranslator.tests.safe" value="true"/>
+            <classpath>
+                <path refid="classpath"/>
+                <pathelement location="build/test-safe"/>
+                <pathelement location="build/retrotranslator-runtime-${version}.jar"/>
+            </classpath>
+            <formatter type="brief" usefile="false"/>
+            <batchtest>
+                <fileset dir="build/test-safe" includes="**/*TestCase.class" />
+            </batchtest>
+        </junit>
+        <fail if="test.failed"/>
     </target>
 
     <target name="test-embedded" depends="compile-tests">
